<resources>
    <string name="app_name">FirebaseAuth</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_screen">Login Screen</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_create_here">Don\'t have an account? Create here</string>
    <string name="sign_up_screen">Sign Up Screen</string>
    <string name="create_account">Create Account</string>
    <string name="log_out">Log out</string>
    <string name="userlogin"><b>UserLogin:</b> %s</string>
    <string name="web_client_id">336039711772-1kt0hir63e2ggmb91aao7np3akb2ss8t.apps.googleusercontent.com</string>

</resources>